--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ html,body,h1,h2,h3,h4 {font-family: "Helvetica"}
     </div>
     <div class="w3-center w3-col s4">
       <a href="#">
-            <img src="Images/logo/sic-Logo.png" alt="SIC Logo" style="width: 3vw; padding-top: 2px">
+            <img src="Images/logo/sic-logo.png" alt="SIC Logo" style="width: 3vw; padding-top: 2px">
         </a>
     </div>
   </div>
