--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ html,body,h1,h2,h3,h4 {font-family: "Helvetica"}
   <!-- Slideshow -->
   <div class="w3-container">
     <div class="w3-display-container mySlides">
-      <img src="Images/p1.JPG" style="width:50%">
+      <img src="Images/p1.jpg" style="width:100%">
       <div class="w3-display-topleft w3-container w3-padding-32">
       </div>
     </div>
